# kiko

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
comms/desktop-client/: .gitignore  Cargo.toml  README.md  SETUP.md  index.html  main.js  package.json
comms/desktop-client/src/: main.rs
comms/desktop-client/src-tauri/: Cargo.toml  tauri.conf.json
comms/desktop-client/src-tauri/src/: main.rs
comms/robot-server/: Cargo.toml  build.rs
comms/robot-server/proto/: robot.proto
comms/robot-server/src/: main.rs  protocol.rs
crates/kiko-slam/: .gitignore  Cargo.toml
crates/kiko-slam/src/: channel.rs  depth.rs  diagnostics.rs  env.rs  lib.rs  local_ba.rs  loop_closure.rs  main.rs  map.rs  math.rs  oak.rs  observability.rs  pairing.rs  pipeline.rs  pnp.rs  pose_graph.rs  preprocess.rs  test_helpers.rs  tracker.rs  triangulation.rs  viz.rs
crates/kiko-slam/src/dataset/: mod.rs  reader.rs
crates/kiko-slam/src/dense/: backend.rs  command_mapper.rs  mod.rs  ring_buffer.rs
crates/kiko-slam/src/inference/: backend.rs  eigenplaces.rs  lightglue.rs  mod.rs  place.rs  superpoint.rs
crates/kiko-slam/src/pose_graph/: essential.rs  mod.rs  optimizer.rs  solver.rs  sparse.rs  tests.rs
crates/oak-sys/: Cargo.toml  build.rs
crates/oak-sys/cpp/: oak_device.cpp  oak_device.hpp
crates/oak-sys/src/: lib.rs
embedded/: Cargo.toml
embedded/.cargo/: config.toml
embedded/src/: main.rs
