[workspace]
resolver = "2"
members = [
  "crates/kiko-slam",
  "crates/oak-sys",
  "comms/robot-server",
  "comms/desktop-client/src-tauri",
  "embedded",
]
default-members = ["crates/kiko-slam"]

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[workspace.lints.rust]
unsafe_code = "warn"

[profile.release.package.embedded]
opt-level = "z"
debug = true
