[package]
name = "embedded"
version = "0.1.0"
edition = "2024"


[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-halt = "0.2"
nb = "1.0"
heapless = "0.7"
embedded-hal = "0.2"
stm32f4xx-hal = { version = "0.20", features = ["stm32f446"] }

[profile.release]
opt-level = "z"
lto = true
debug = true
