[package]
name = "desktop-client"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = "0.11"
tokio = { version = "1.35", features = ["full"] }
prost = "0.12"
chrono = "0.4"

tauri = { version = "1.5", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

webrtc = "0.9"

[build-dependencies]
tonic-build = "0.11"
tauri-build = "1.5"

