[package]
name = "robot-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-serial = "5.4"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
warp = "0.3"
bytes = "1.5"
log = "0.4"
env_logger = "0.10"
serde_json = "1.0"
tokio-stream = "0.1"
futures = "0.3"
