[package]
name = "kiko-slam"
version = "0.1.0"
edition = "2024"

[features]
default = []
record = ["oak-sys", "ctrlc", "chrono"]
ort-coreml = ["ort/coreml"]
ort-cuda = ["ort/cuda"]
ort-tensorrt = ["ort/tensorrt"]

[dependencies]
clap = { version = "4.5.28", features = ["derive", "env"] }
crossbeam-channel = "0.5.13"
image = "0.25.9"
libc = "0.2.153"
ndarray = "0.17.1"
ort = { version = "2.0.0-rc.10", features = ["ndarray"] }
rerun = "=0.27.2"
serde = "1.0.228"
serde_json = "1.0.149"
oak-sys = { path = "../oak-sys", optional = true }
ctrlc = { version = "3.4", optional = true }
chrono = { version = "0.4", optional = true }

[[bin]]
name = "kiko-slam"
path = "src/bin/kiko_slam.rs"
