[package]
name = "robot-control-client"
version = "0.0.0"
description = "Robot Control Desktop Client"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = [ "dialog-all", "shell-open"] }
tokio = { version = "1.35", features = ["full"] }
bincode = "1.3"
env_logger = "0.10"
log = "0.4"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
